--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.andenginetest"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="turtlenamdeveloper.game.nemododge"
+    android:versionCode="2"
+    android:versionName="0.9.1" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -10,12 +10,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.andenginetest.MainActivity"
-            android:label="@string/app_name" >
+            android:name="turtlenamdeveloper.game.nemododge.MainActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
